# disk_quadrangulations

./: .gitignore  CMakeLists.txt  LICENSE  README.md
exe/: dquad.cpp  enumerate.cpp
results/: qdrgl_until_18V_14B.dqs
src/: cpp_utils.hpp  disk_quadrangulation.cpp  disk_quadrangulation.h  geolog.cpp  logging.cpp  logging.h  nauty_wrapper.cpp  nauty_wrapper.h
